[project]
name = "ToolsBox"
version = "1.0"
description = "一個簡單的工具盒"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "paratranz-py",
]

[tool.uv.sources]
paratranz-py = { git = "https://github.com/TeamKugimiya/paratranz-py" }

[tool.uv]
package = true

[project.scripts]
bulk_update = "bulk_update:main"
